# src/configs/swagger/schemas/params/index.js
@@ -1,0 +1,5 @@
+const UserFilterParams =require("./user-filter-params.schema");
+
+module.exports ={
+    UserFilterParams,
+}
