# src/configs/swagger/schemas/responses/index.js
@@ -1,0 +1,5 @@
+const UserFilterResponse = require('./user-filter-response.schema');
+
+module.exports = {
+    UserFilterResponse,
+};
